--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,3 +10,20 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  session:
+    storeType: jdbc
+    jdbc:
+      tableName: SPRING_SESSION
+      schema: classpath:org/springframework/session/jdbc/schema-mysql.sql
+      initializeSchema: always
+server:
+  servlet:
+    session:
+      timeout: 1800
+      tracking-modes: cookie
+      cookie:
+        max-age: 1800
+        httpOnly: true
+        sameSite: strict
+        secure: true
+#        domain:
