--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -5,6 +5,7 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: create-drop
     properties:
@@ -16,3 +17,8 @@ spring:
       tableName: SPRING_SESSION
       schema: classpath:org/springframework/session/jdbc/schema-mysql.sql
       initializeSchema: always
+
+storage:
+  image-config:
+    root-location: src/main/resources/public/upload/image
+    base-url: http://localhost:8080/upload/image
