--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -38,5 +38,6 @@ env:
 
 storage:
   image-config:
-    root-location: src/main/resources/public/upload/image
-    base-url: http://localhost:8080/upload/image
+    root-location: src/main/resources/uploads
+    base-url: http://localhost:8080/uploads/images
+    resource-path: classpath*:uploads/**
