--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ ext {
 }
 
 dependencies {
+    implementation 'org.hibernate:hibernate-spatial:6.2.6.Final'
+
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
