--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     asciidoctorExt "org.springframework.restdocs:spring-restdocs-asciidoctor:3.0.0"
     testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc:3.0.0"
 
+    implementation 'org.springframework.session:spring-session-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
